commit 124: - 톡톡 화면 만들기 - 상품을 장바구니에 담을 때 해당 상품이 장바구니에 있는지 확인 로직 추가

--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -251,20 +251,36 @@
                         if(submitButtonId === 'into-cart') {
                             const result = confirm("해당 상품을 장바구니에 담으시겠습니까?")
                             if(result) {
-                                const OBJ = {'hongProductId': obj['hongProductId'], 'cartCnt': obj['product-order-num']}
                                 $.ajax({
-                                    type: 'POST',
-                                    url: `/api/cart`,
+                                    type: 'GET',
+                                    url: `/api/find-cart/${obj['hongProductId']}`,
                                     dataType: 'json',
-                                    data: JSON.stringify(OBJ),
                                     contentType: 'application/json',
                                     success: function (data) {
-                                        if (data.httpStatus === 200) {
-                                            const result = confirm('해당 물품이 장바구니에 담겼습니다.' + '\n' + "장바구니를 보러가시겠습니까?")
-                                            if (result) window.location.href = '/user/cart'
-                                            else $("#product-purchase-modal").modal('hide')
-                                        } else {
-                                            alert("해당 물품을 장바구니에 담기에 실패했습니다.")
+                                        if(data.httpStatus === 200) {
+                                            if(!data.message) alert("이미 해당 상품이 장바구니에 있습니다." + '\n' + "확인해주세요.")
+                                            else {
+                                                const OBJ = {'hongProductId': obj['hongProductId'], 'cartCnt': obj['product-order-num']}
+                                                $.ajax({
+                                                    type: 'POST',
+                                                    url: `/api/cart`,
+                                                    dataType: 'json',
+                                                    data: JSON.stringify(OBJ),
+                                                    contentType: 'application/json',
+                                                    success: function (data) {
+                                                        if (data.httpStatus === 200) {
+                                                            const result = confirm('해당 물품이 장바구니에 담겼습니다.' + '\n' + "장바구니를 보러가시겠습니까?")
+                                                            if (result) window.location.href = '/user/cart'
+                                                            else $("#product-purchase-modal").modal('hide')
+                                                        } else {
+                                                            alert("해당 물품을 장바구니에 담기에 실패했습니다.")
+                                                        }
+                                                    },
+                                                    error: function (xhr, status, error) {
+                                                        console.error('Error getting password:', error);
+                                                    }
+                                                });
+                                            }
                                         }
                                     },
                                     error: function (xhr, status, error) {
