--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,17 +26,17 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown2" id="post-dropdown"></ul>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Dropdown3
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                        <li><a class="dropdown-item" href="#">Option 1</a></li>
-                        <li><a class="dropdown-item" href="#">Option 2</a></li>
-                        <li><a class="dropdown-item" href="#">Option 3</a></li>
-                    </ul>
-                </li>
+<!--                <li class="nav-item dropdown">-->
+<!--                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-bs-toggle="dropdown"-->
+<!--                       aria-expanded="false">-->
+<!--                        Dropdown3-->
+<!--                    </a>-->
+<!--                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">-->
+<!--                        <li><a class="dropdown-item" href="#">Option 1</a></li>-->
+<!--                        <li><a class="dropdown-item" href="#">Option 2</a></li>-->
+<!--                        <li><a class="dropdown-item" href="#">Option 3</a></li>-->
+<!--                    </ul>-->
+<!--                </li>-->
                 <th:block sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_SUPER')">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-bs-toggle="dropdown"
@@ -75,6 +75,9 @@
                         <i data-feather="edit-2" class="font-medium-2 ms-50"></i>&nbsp;&nbsp;&nbsp; 나의 리뷰</a>
                     </li>
                 </ul>
+                <button class="btn" type="button" id="talkButton" onclick="talkButton()" data-toggle="tooltip" data-placement="top" title="질문 톡톡">
+                    <img src="/assets/src/header/talk.png" alt="Button Image" style="width:40px;" class="rounded-pill">
+                </button>
             </div>
         </div>
     </nav>
@@ -83,6 +86,10 @@
         const logout = () => {
             sessionStorage.clear();
             location.href='/logout';
+        }
+
+        const talkButton = () => {
+            location.href = '/talk'
         }
 
         const drawPostDom = () => {
@@ -113,6 +120,7 @@
 
 
         window.onload = function() {
+            $('[data-toggle="tooltip"]').tooltip()
             drawPostDom();
         };
 
