commit 125: - 쿠폰 테이블, 쿠폰 사용자 등록 테이블, 쿠폰 사용자 이용 이력 테이블 추가 - 사용자는 자기한테 등록된 쿠폰을 주문하는 경우 이용 가능하다

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -50,6 +50,7 @@
                             <li><a class="dropdown-item" href="/manager/user">사용자 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/fileDownload">파일 업로드/다운로드 기록</a></li>
                             <li><a class="dropdown-item" href="/manager/postType">게시판 관리</a></li>
+                            <li><a class="dropdown-item" href="/manager/coupon">쿠폰 관리</a></li>
                         </ul>
                     </li>
                 </th:block>
@@ -73,6 +74,9 @@
                     </li>
                     <li><a class="dropdown-item" href="/user/review">
                         <i data-feather="edit-2" class="font-medium-2 ms-50"></i>&nbsp;&nbsp;&nbsp; 나의 리뷰</a>
+                    </li>
+                    <li><a class="dropdown-item" href="/user/coupon">
+                        <i data-feather="percent" class="font-medium-2 ms-50"></i>&nbsp;&nbsp;&nbsp; 나의 쿠폰</a>
                     </li>
                 </ul>
                 <button class="btn" type="button" id="talkButton" onclick="talkButton()" data-toggle="tooltip" data-placement="top" title="질문 톡톡">
