--- a/src/main/resources/templates/order/cartIndex.html
+++ b/src/main/resources/templates/order/cartIndex.html
@@ -136,7 +136,7 @@
             })
 
             const obj = {'userId': userId, 'city': city, 'street': street, 'zipcode': zipcode, 'orders': orders}
-
+            // obj['hongCouponHasId'] = 6
             const result = confirm("해당 상품들을 결제하시겠습니까?")
             if(result) {
                 $.ajax({
