--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,18 +26,18 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown2" id="post-dropdown"></ul>
                 </li>
-<!--                <li class="nav-item dropdown">-->
-<!--                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-bs-toggle="dropdown"-->
-<!--                       aria-expanded="false">-->
-<!--                        Dropdown3-->
-<!--                    </a>-->
-<!--                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">-->
-<!--                        <li><a class="dropdown-item" href="#">Option 1</a></li>-->
-<!--                        <li><a class="dropdown-item" href="#">Option 2</a></li>-->
-<!--                        <li><a class="dropdown-item" href="#">Option 3</a></li>-->
-<!--                    </ul>-->
-<!--                </li>-->
                 <th:block sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_SUPER')">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            기록관리
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                            <li><a class="dropdown-item" href="/manager/fileDownload">파일 업로드/다운로드 기록</a></li>
+                            <li><a class="dropdown-item" href="#">쿠폰 사용 기록</a></li>
+                        </ul>
+                    </li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">
@@ -48,7 +48,6 @@
                             <li><a class="dropdown-item" href="/manager/order">주문 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/deliver">배송 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/user">사용자 관리</a></li>
-                            <li><a class="dropdown-item" href="/manager/fileDownload">파일 업로드/다운로드 기록</a></li>
                             <li><a class="dropdown-item" href="/manager/postType">게시판 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/coupon">쿠폰 관리</a></li>
                         </ul>
