commit 129: 쿠폰 사용 이력 조회 화면 및 로직 구현

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -34,7 +34,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
                             <li><a class="dropdown-item" href="/manager/fileDownload">파일 업로드/다운로드 기록</a></li>
-                            <li><a class="dropdown-item" href="#">쿠폰 사용 기록</a></li>
+                            <li><a class="dropdown-item" href="/manager/couponHist">쿠폰 사용 기록</a></li>
                         </ul>
                     </li>
 
