--- a/src/main/resources/templates/user/order.html
+++ b/src/main/resources/templates/user/order.html
@@ -35,6 +35,7 @@
                         <th style="width: 5%" rowspan="2">주문상태</th>
                         <th style="width: 10%" rowspan="2">주문날짜</th>
                         <th style="width: 10%" COLSPAN="3">주문상세정보</th>
+                        <th style="width: 5%" rowspan="2">쿠폰 <br/> 사용여부</th>
                         <th style="width: 10%" rowspan="2">전체 가격</th>
                         <th style="width: 1%" rowspan="2"></th>
                         <th style="width: 5%" rowspan="2">배송상태</th>
@@ -46,7 +47,7 @@
                         <th>주문개수</th>
                         <th>총가격</th>
                         <th>시/도</th>
-                        <th>시군구/읍면동</th>
+                        <th>시군구/ <br/> 읍면동</th>
                         <th>우편번호</th>
                     </tr>
                 </thead>
@@ -65,6 +66,16 @@
                             <td th:text="${order.orderDetails.get(0).productName}" style="width: 10%"></td>
                             <td th:text="|${order.orderDetails.get(0).orderCnt} 개|" style="width: 5%"></td>
                             <td th:text="|${#numbers.formatInteger(order.orderDetails.get(0).orderPrice, 0, 'COMMA')} 원|" style="width: 10%"></td>
+                            <th:block th:if="${order.useCoupon}">
+                                <td th:rowspan="${order.orderDetails.size()}" style="width: 5%">
+                                    <span>사용</span>
+                                    <br />
+                                    <span th:text="|${#numbers.formatInteger(order.couponRate, 0, 'COMMA')} 원|"></span>
+                                </td>
+                            </th:block>
+                            <th:block th:unless="${order.useCoupon}">
+                                <td th:rowspan="${order.orderDetails.size()}" style="width: 5%">미사용</td>
+                            </th:block>
                             <td style="width: 10%" th:rowspan="${order.orderDetails.size()}">
                                 <b th:text="|${#numbers.formatInteger(totalPrice.get(orderStat.index), 0, 'COMMA')} 원|"></b>
                             </td>
