--- a/src/main/resources/templates/user/coupon.html
+++ b/src/main/resources/templates/user/coupon.html
@@ -1,10 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/default}">
 
-</body>
+<th:block layout:fragment="head">
+    <title>HONG SHOP</title>
+    <style>
+        th, td {
+            text-align: center;
+            vertical-align: middle;
+        }
+        tr{
+            text-align: center;
+        }
+    </style>
+</th:block>
+
+<th:block layout:fragment="content">
+    <div class="mt-3">
+        <div class="card-header" style="margin-bottom: 10px">
+            <div class="card-text d-flex justify-content-between">
+                <div class="text-start">
+                    <h3>나의 쿠폰</h3>
+                </div>
+                <div class="text-end"></div>
+            </div>
+        </div>
+        <div class="card-body">
+            <table class="table table-bordered" id="coupon-table">
+                <thead>
+                    <tr>
+                        <th style="width: 5%;">번호</th>
+                        <th style="width: 10%">쿠폰이름</th>
+                        <th style="width: 10%">할인가격(원)</th>
+                        <th style="width: 5%">사용여부</th>
+                        <th style="width: 10%">시작일</th>
+                        <th style="width: 10%">종료일</th>
+                        <th style="width: 5%">삭제</th>
+                    </tr>
+                </thead>
+                <tbody>
+                <th:block th:if="${couponLst.size() == 0}">
+                    <tr>
+                        <td colspan="7">쿠폰 정보가 비어있습니다.</td>
+                    </tr>
+                </th:block>
+                <th:block th:unless="${couponLst.size() == 0}">
+                    <th:block  th:each="coupon, couponStat : ${couponLst}">
+                        <tr>
+                            <td th:text="${couponStat.index + 1}" style="width: 5%"></td>
+                            <td th:text="${coupon.hongCouponVO.couponName}" style="width: 10%"></td>
+                            <td th:text="${#numbers.formatInteger(coupon.hongCouponVO.couponRate, 0, 'COMMA')}" style="width: 10%"></td>
+                            <td th:text="${(coupon.useAt == 'Y') ? '사용' : '미사용'}" style="width: 5%"></td>
+                            <td th:text="${#strings.substring(coupon.hongCouponVO.startDate, 0, 10)}" style="width: 10%"></td>
+                            <td th:text="${#strings.substring(coupon.hongCouponVO.startDate, 0, 10)}" style="width: 10%"></td>
+                            <td style="width: 5%">
+                                <button type="button" class="btn btn-sm btn-outline-danger coupon-delete-btn" th:data-delete="${coupon.useAt}" th:value="${coupon.hongCouponHasId}">삭제</button>
+                            </td>
+                        </tr>
+                    </th:block>
+                </th:block>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</th:block>
+
+
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+
+        /* 쿠폰 삭제 */
+        $(".coupon-delete-btn").on("click", function(){
+            const couponHasId = $(this).val()
+            const useAt = $(this).attr('data-delete')
+            console.log("coupon-delete-btn : ", couponHasId)
+
+            const msg = (useAt === 'N') ? '해당 쿠폰은 아직 사용 전입니다.' + '\n' + '해당 쿠폰을 삭제하시겠습니까?' : '해당 쿠폰을 삭제하시겠습니까?'
+            const result = confirm(`${msg}`)
+            if(result) {
+                $.ajax({
+                    type: 'DELETE',
+                    url: `/api/coupon-has/${couponHasId}`,
+                    dataType: 'json',
+                    contentType: 'application/json',
+                    success: function (data) {
+                        if(data.httpStatus === 200) {
+                            alert(`${data.message}`)
+                            window.location.href = `/user/coupon`
+                        }else {
+                            alert("해당 쿠폰 삭제에 실패했습니다.")
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        console.error('Error getting password:', error);
+                    }
+                });
+            }
+        })
+    </script>
+</th:block>
+
 </html>
