--- a/src/main/resources/templates/user/coupon.html
+++ b/src/main/resources/templates/user/coupon.html
@@ -23,7 +23,9 @@
                 <div class="text-start">
                     <h3>나의 쿠폰</h3>
                 </div>
-                <div class="text-end"></div>
+                <div class="text-end">
+                    <button type="button" class="btn btn-info" id="request-coupon">쿠폰 요청하기</button>
+                </div>
             </div>
         </div>
         <div class="card-body">
@@ -70,11 +72,16 @@
 <th:block layout:fragment="script">
     <script th:inline="javascript">
 
+        $("#request-coupon").on('click', function(e) {
+            console.log('request-coupon clicked')
+            // 요청 가능 쿠폰 리스트 보여주면서 -> 쿠폰 요청하기?
+            // 그럴려면 테이블이 또 필요한가?
+        })
+
         /* 쿠폰 삭제 */
         $(".coupon-delete-btn").on("click", function(){
             const couponHasId = $(this).val()
             const useAt = $(this).attr('data-delete')
-            console.log("coupon-delete-btn : ", couponHasId)
 
             const msg = (useAt === 'N') ? '해당 쿠폰은 아직 사용 전입니다.' + '\n' + '해당 쿠폰을 삭제하시겠습니까?' : '해당 쿠폰을 삭제하시겠습니까?'
             const result = confirm(`${msg}`)
