commit 136 : (사용자) 쿠폰 요청하기

--- a/src/main/resources/templates/manager/coupon.html
+++ b/src/main/resources/templates/manager/coupon.html
@@ -328,7 +328,7 @@
                 </div>
             </div>
         </div>
-        <!-- e: chooseUserModal -->
+        <!-- e: requestUserModal -->
 
 
     </div>
