--- a/src/main/resources/templates/user/coupon.html
+++ b/src/main/resources/templates/user/coupon.html
@@ -25,6 +25,7 @@
                 </div>
                 <div class="text-end">
                     <button type="button" class="btn btn-info" id="request-coupon">쿠폰 요청하기</button>
+                    <button type="button" class="btn btn-outline-info" id="request-coupon-lst">요청된 쿠폰보기</button>
                 </div>
             </div>
         </div>
@@ -65,6 +66,66 @@
                 </tbody>
             </table>
         </div>
+
+        <!-- s: chooseCouponModal -->
+        <div class="modal modal-lg" id="choose-coupon-modal">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">쿠폰 요청하기</h4>
+                        <button type="button" class="btn-close" id="close-request-user-modal-btn" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <table class="table table-hover table-bordered" id="request-user-table">
+                            <thead>
+                            <tr>
+                                <th style="width: 5%;"></th>
+                                <th style="width: 10%;">쿠폰이름</th>
+                                <th style="width: 10%">쿠폰 <br/> 할인가격</th>
+                                <th style="width: 10%">시작일</th>
+                                <th style="width: 10%">종료일</th>
+                            </tr>
+                            </thead>
+                            <tbody id="request-user-tbody">
+                                <th:block th:if="${couponForRequest.size() == 0}">
+                                    <tr>
+                                        <td colspan="5">요청가능한 쿠폰이 없습니다.</td>
+                                    </tr>
+                                </th:block>
+                                <th:block th:unless="${couponForRequest.size() == 0}">
+                                    <th:block th:each="coupon , couponStat : ${couponForRequest}">
+                                        <tr class="clickable-row">
+                                            <td style="width: 5%">
+                                                <div class="form-check" style="text-align: center; display: inline-block;">
+                                                    <input class="form-check-input request-chk" type="checkbox" th:value="${coupon.couponId}" th:id="|checkbox-${coupon.couponId}|">
+                                                    <label class="form-check-label" th:for="|checkbox-${coupon.couponId}|"></label>
+                                                </div>
+                                            </td>
+                                            <td th:text="${coupon.couponName}" style="width: 10%"></td>
+                                            <td th:text="${#numbers.formatInteger(coupon.couponRate, 0, 'COMMA')}" style="width: 10%"></td>
+                                            <td th:text="${#strings.substring(coupon.startDate, 0, 10)}" style="width: 10%"></td>
+                                            <td th:text="${#strings.substring(coupon.endDate, 0, 10)}" style="width: 10%"></td>
+                                        </tr>
+                                    </th:block>
+                                </th:block>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-danger" id="cancel-choose-coupon-btn" data-bs-dismiss="modal">닫기</button>
+                        <button type="button" class="btn btn-outline-info" id="choose-coupon-btn">요청하기</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- e: chooseCouponModal -->
     </div>
 </th:block>
 
@@ -72,10 +133,53 @@
 <th:block layout:fragment="script">
     <script th:inline="javascript">
 
+        $(document).ready(function() {
+            /* 쿠폰 요청을 위한 모달 테이블 -> row 클릭시, 해당 체크박스 클릭 */
+            $('.clickable-row').click(function(event) {
+                if (event.target.type !== 'checkbox') {
+                    const checkbox = $(this).find('.request-chk');
+                    checkbox.prop('checked', !checkbox.prop('checked'));
+                }
+            });
+        })
+
+        /* 자신이 요청한 쿠폰 리스트 조회 */
+        $("#request-coupon-lst").on('click', function(e){
+            console.log("request-coupon-lst clicked")
+        })
+
+        /* 쿠폰 요청하기 버튼 클릭 이벤트 */
         $("#request-coupon").on('click', function(e) {
-            console.log('request-coupon clicked')
-            // 요청 가능 쿠폰 리스트 보여주면서 -> 쿠폰 요청하기?
-            // 그럴려면 테이블이 또 필요한가?
+            $("#choose-coupon-modal").modal('show')
+        })
+
+        /* 쿠폰 요청하기 (쿠폰 요청 모달에서) 버튼 클릭 이벤트 */
+        $("#choose-coupon-btn").on('click', function(e) {
+            const checked = $('.request-chk:checked')
+            const lst = checked.map(function(){              // 요청 id
+                return $(this).val()
+            }).get();
+
+            const obj = {'couponId': lst}
+
+            $.ajax({
+                type: 'POST',
+                url: `/api/coupon-request-all`,             // 리스트로된 쿠폰에 대해 모두 요청한다.
+                dataType: 'json',
+                data: JSON.stringify(obj),
+                contentType: 'application/json',
+                success: function (data) {
+                    if(data.httpStatus === 200) {
+                        alert(`총 ${data.message}개의 쿠폰이 요청되었습니다.`)
+                        window.location.href='/manager/coupon'
+                    }else {
+                        alert("쿠폰 요청에 실패했습니다.")
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error('Error getting password:', error);
+                }
+            });
         })
 
         /* 쿠폰 삭제 */
